<resources>
    <string name="app_name">考生身份认证</string>
    <string name="pwd_format">0123456789qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM!@_.</string>
    <string name="security_pwd_format">0123456789</string>
    <string name="verification_code_format">0123456789qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="invite_code_format">0123456789qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="emptyView_mode_desc_fail_title">加载失败</string>
    <string name="emptyView_mode_desc_retry">点击重试</string>
    <string name="filtrate">筛选</string>
    <string name="more">更多</string>
    <string name="copyright">Copyright 169 联通（辽宁）产业互联网有限公司 . All Rights Reserved.</string>
    <string name="login_net_setting">网络设置 ></string>
    <string name="admin_login">管理员登录</string>
    <string name="main_examination">选择考场</string>
    <string name="login_title">考生身份认证系统</string>
    <string name="login_account_hint">用户名</string>
    <string name="login_btn">登录</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_verify_code">请输入验证码</string>
    <string name="examination_check">场次查看</string>
    <string name="data_view">数据查看</string>
    <string name="validation_data_check">验证数据查看</string>
    <string name="dialog_logout">确定要退出登录吗？</string>
    <string name="data_lead">数据导入</string>
    <string name="data_export">数据导出</string>
    <string name="data_clear">数据清空</string>
    <string name="data_lead_mode">请选择导入方式</string>
    <string name="data_lead_net">网络导入</string>
    <string name="data_export_net">网络导出</string>
    <string name="data_lead_usb">U盘导入</string>
    <string name="data_export_usb">U盘导出</string>
    <string name="data_lead_sdcard">SD卡导入</string>
    <string name="data_export_sdcard">SD卡导出</string>
    <string name="data_lead_in">导入数据</string>
    <string name="data_export_t">导出数据</string>
    <string name="system__setting">基本设置</string>
    <string name="mute__setting">静音设置</string>
    <string name="accord__setting">按键音</string>
    <string name="voice__setting">语音提示</string>
    <string name="advanced__setting">高级设置</string>
    <string name="start_valid_time">开始验证时间</string>
    <string name="end_valid_time">结束验证时间</string>
    <string name="every_subject_end_time">每科考试结束时间</string>
    <string name="valid_interval_time">识别间隔时长</string>
    <string name="verify_time">验证时间</string>
    <string name="login_system">进入系统</string>
    <string name="initialize_title">考生身份认证系统</string>
    <string name="initialize_update">系统正在初始化数据请稍后…</string>
    <string name="session_no">编号</string>
    <string name="session_subject">科目</string>
    <string name="exa_type">考试类型</string>
    <string name="exa_name">考试名称</string>
    <string name="exa_time">考试时间</string>
    <string name="data_import_clear">清空导入数据</string>
    <string name="data_auth_clear">清空验证数据</string>
    <string name="data_clear_confirm">确定清空</string>
    <string name="stu_name">姓名</string>
    <string name="stu_id_no">身份证号</string>
    <string name="stu_admission">准考证号</string>
    <string name="examination">场次</string>
    <string name="export_session">请选择导出场次</string>
    <string name="export_session_">选择导出场次</string>
    <string name="session">场次</string>
    <string name="session_name">场次名称</string>
    <string name="export_type">请选择导出方式</string>
    <string name="dialog_export">数据导出</string>
    <string name="data_clear_tip">确定要清空数据</string>
    <string name="data_clear_content">数据一旦清空无法恢复</string>
    <string name="btn_data_clear">取消</string>
    <string name="btn_data_confirm">确定</string>
    <string name="dialog_confirm_message">确认信息</string>
    <string name="date_title">请校正日期和时间</string>
    <string name="setting">设置</string>
    <string name="ip_setting">请输入IP和端口(192.168.1.1:8888)</string>
    <string name="verify_result">结果</string>
    <string name="health_code">健康码</string>
    <string name="verify_message_count">当前场次共有%s条验证数据</string>
    <string name="import_error">导入异常</string>
    <string name="face_import_error">人脸库导入异常，是否尝试重新导入?</string>

    <!--日志 -->
    <string name="logs_title">日志信息</string>
    <string name="logs_clear">清空日志</string>
    <string name="logs_clear_all">全部清空</string>
    <string name="logs_clear_title">确定要清空日志？</string>
    <string name="logs_clear_content">日志一旦清除无法恢复</string>

    <!--系统测试-->
    <string name="camera_test">拍照测试</string>
    <string name="screen_test">屏幕测试</string>
    <string name="voice_test">语音测试</string>
    <string name="face_test">人脸测试</string>
    <string name="test_all">全部测试</string>

    <!-- 数据导入选择 -->
    <string name="data_import_select">请选择考试数据</string>
    <string name="data_import_tips">请选择并确认本考点需要导入的考试数据</string>
    <string name="msg_none">暂无考生信息～</string>

    <!-- 验证数据统计-->
    <string name="validation_data_statistics">验证数据统计</string>
    <string name="warm_reminder">温馨提示：页面显示的数据仅是本设备的验证数据 ～</string>
    <string name="not_validation">未验证</string>
    <string name="validation_pass">通过</string>
    <string name="validation_doubt">存疑</string>
    <string name="validation_not_pass">未通过</string>
</resources>
