<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_weight="14"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="30dp">

    <TextView
        android:id="@+id/tv_stu_no"
        android:textSize="8sp"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="@color/_333333"
        android:text="@string/session_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_stu_name"
        android:textSize="8sp"
        android:layout_weight="3"
        android:gravity="center"
        android:textColor="@color/_333333"
        android:text="@string/stu_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_stu_num"
        android:textSize="8sp"
        android:layout_weight="5"
        android:gravity="center"
        android:textColor="@color/_333333"
        android:text="@string/stu_id_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_stu_exa_num"
        android:textSize="8sp"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="@color/_333333"
        android:text="@string/stu_admission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_state"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_exam"
            android:textSize="8sp"
            android:gravity="center"
            android:textColor="@color/_333333"
            android:text="@string/examination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>