<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_weight="12"
    android:layout_height="30dp">

    <TextView
        android:id="@+id/tv_subject"
        android:textSize="8sp"
        android:layout_weight="2"
        android:textColor="@color/_333333"
        android:text="@string/session_subject"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_type"
        android:textSize="8sp"
        android:layout_weight="2"
        android:textColor="@color/_333333"
        android:text="@string/exa_type"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_name"
        android:textSize="8sp"
        android:layout_weight="3"
        android:textColor="@color/_333333"
        android:text="@string/exa_name"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_time"
        android:textSize="8sp"
        android:layout_weight="5"
        android:textColor="@color/_333333"
        android:text="@string/exa_time"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

</LinearLayout>