<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:text="@string/examination_check"
            android:textSize="9sp"
            android:textColor="#FF163366"
            android:gravity="left"
            android:lineSpacingExtra="13dp" />

        <View
            android:id="@+id/data_lead_line"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            android:layout_marginTop="9dp"
            android:background="@drawable/bg_driver"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

        <LinearLayout
            android:id="@+id/ll_header"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="12"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_common_list_header"
            app:layout_constraintTop_toBottomOf="@+id/data_lead_line"
            android:layout_width="match_parent"
            android:layout_height="25dp">
            
            <TextView
                android:textSize="8sp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/_333333"
                android:text="@string/session_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="8sp"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/_333333"
                android:text="@string/session_subject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="8sp"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/_333333"
                android:text="@string/exa_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="8sp"
                android:layout_weight="3"
                android:gravity="center"
                android:textColor="@color/_333333"
                android:text="@string/exa_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="8sp"
                android:layout_weight="4"
                android:gravity="center"
                android:textColor="@color/_333333"
                android:text="@string/exa_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/exam_recycler"
            app:layout_constraintTop_toBottomOf="@+id/ll_header"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>