<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.askia.coremodel.viewmodel.LoginViewModel" />

        <variable
            name="click"
            type="com.lncucc.authentication.activitys.LoginActivity.ProxyClick" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@mipmap/icon_bg_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bg_login_white"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginEnd="87dp"
            android:layout_marginTop="72dp"
            android:layout_width="270dp"
            android:layout_height="260dp">

            <TextView
                android:text="@string/login_title"
                android:textColor="@color/main_title"
                android:textSize="16sp"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:letterSpacing="0.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:focusableInTouchMode="true"
                android:background="@drawable/bg_login_account"
                android:layout_marginTop="38dp"
                android:layout_width="210dp"
                android:gravity="center_vertical"
                android:layout_height="30dp">
                <ImageView
                    android:background="@mipmap/icon_account"
                    android:layout_marginStart="5dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>

                <EditText
                    android:id="@+id/edt_account"
                    android:singleLine="true"
                    android:background="@null"
                    android:textSize="11sp"
                    android:paddingStart="10dp"
                    android:text="@={viewmodel.account}"
                    android:hint="@string/login_account_hint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <RelativeLayout
                android:background="@drawable/bg_login_account"
                android:layout_marginTop="15dp"
                android:layout_width="210dp"
                android:gravity="center_vertical"
                android:layout_height="30dp">
                <ImageView
                    android:id="@+id/iv_pwd"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/icon_pwd"
                    android:layout_marginStart="5dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>

                <EditText
                    android:id="@+id/edt_pwd"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:layout_toRightOf="@+id/iv_pwd"
                    android:layout_toLeftOf="@+id/iv_pwd_switch"
                    android:textSize="11sp"
                    android:text="@={viewmodel.password}"
                    android:paddingStart="10dp"
                    android:hint="@string/login_pwd_hint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:id="@+id/iv_pwd_switch"
                    android:layout_alignParentRight="true"
                    android:onClick="@{()->click.openEyes()}"
                    android:background="@mipmap/icon_pwd_show"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/btn_login"
                android:text="@string/login_btn"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:onClick="@{()->click.login()}"
                android:background="@drawable/bg_login_button"
                android:layout_width="210dp"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/tv_net_setting"
                android:onClick="@{()->click.setHost()}"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:text="@string/login_net_setting"
                android:layout_marginTop="15dp"
                android:layout_marginRight="-78dp"
                android:textColor="#FF2A6DE5"
                android:textSize="11sp"
                />
        </LinearLayout>
        <TextView
            android:text="@string/copyright"
            android:textSize="7sp"
            android:textColor="#6D91D2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>