<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@drawable/bg_write_round_five"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:orientation="vertical"
        android:layout_width="290dp"
        android:layout_height="165dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="30dp">
            <TextView
                android:layout_marginStart="10dp"
                android:textSize="10sp"
                android:layout_centerVertical="true"
                android:textColor="@color/_163366"
                android:textStyle="bold"
                android:text="@string/dialog_confirm_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:id="@+id/rl_close"
                android:padding="10dp"
                android:layout_alignParentEnd="true"
                android:layout_width="30dp"
                android:layout_height="30dp">
                <ImageView
                    android:id="@+id/iv_close"
                    android:background="@drawable/cha"
                    android:layout_width="10dp"
                    android:layout_height="10dp"/>
            </RelativeLayout>
        </RelativeLayout>

        <View
            android:background="@drawable/bg_driver"
            android:layout_width="match_parent"
            android:layout_height="2px"/>

        <EditText
            android:id="@+id/edt_confirm_pwd"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:hint="@string/login_verify_code"
            android:textColorHint="#A1AFC9"
            android:paddingLeft="15dp"
            android:textSize="10sp"
            android:background="@drawable/bg_edit"
            android:layout_width="250dp"
            android:layout_height="30dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/tv_data_clear_content"
            android:layout_marginTop="31dp">
            <TextView
                android:id="@+id/tv_pwd_cancel"
                android:text="@string/btn_data_clear"
                android:gravity="center"
                android:textSize="9sp"
                android:layout_marginLeft="63dp"
                android:layout_alignParentStart="true"
                android:textColor="#2A6DE5"
                android:background="@drawable/bg_btn_line_blue"
                android:layout_width="75dp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/tv_pwd_confirm"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="63dp"
                android:background="@drawable/bg_login_button"
                android:gravity="center"
                android:text="@string/btn_data_confirm"
                android:textColor="@color/white"
                android:textSize="9sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>