<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="handles"
            type="com.lncucc.authentication.fragments.DataExportFragment" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/ll_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="31dp">
            <TextView
                android:text="@string/data_export"
                android:textColor="@color/_163366"
                android:textSize="10sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <View
            android:background="@drawable/bg_driver"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

        <TextView
            android:text="@string/export_session"
            android:textSize="9sp"
            android:textColor="#5392FF"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:drawableBottom="@mipmap/icon_bg_import"
            android:drawablePadding="-5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:id="@+id/rl_arrange"
            android:layout_width="match_parent"
            android:layout_height="30dp">
            <TextView
                android:text="@string/session"
                android:textSize="9sp"
                android:layout_marginStart="15dp"
                android:layout_alignParentStart="true"
                android:textColor="@color/_333333"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_session"
                android:layout_toLeftOf="@+id/iv_right"
                android:text="--"
                android:textSize="9sp"
                android:layout_marginRight="5dp"
                android:layout_centerVertical="true"
                android:textColor="@color/_666666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/iv_right"
                android:src="@mipmap/icon_right"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_width="9dp"
                android:layout_height="9dp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:background="@drawable/bg_driver"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="2px"/>

        <TextView
            android:text="@string/export_type"
            android:textSize="9sp"
            android:textColor="#5392FF"
            android:drawableBottom="@mipmap/icon_bg_import"
            android:drawablePadding="-5dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcy_data_export"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_count"
            android:textColor="#3A90FF"
            android:text="当前场次共有100条验证数据"
            android:layout_marginTop="21dp"
            android:textSize="8sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_export"
            android:text="@string/data_export_t"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:onClick="@{handles::export}"
            android:textSize="11sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_data_lead_mode"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/bg_login_button"
            android:layout_width="390dp"
            android:layout_height="30dp"/>
    </LinearLayout>
</layout>