<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <RelativeLayout
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_width="225dp"
        android:layout_height="120dp"
        android:background="@drawable/bg_login_white">

        <RelativeLayout
            android:id="@+id/rl_close"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:layout_width="30dp"
            android:layout_height="30dp">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/cha" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_ip_tips"
            android:text="IP设置"
            android:layout_centerHorizontal="true"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edt_ip_input"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/tv_ip_tips"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_ip_input"
            android:digits="0123456789.:"
            android:text=""
            android:hint="@string/ip_setting"
            android:paddingStart="15dp"
            android:textColor="@color/gray"
            android:textSize="10sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_below="@+id/edt_ip_input">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="30dp"
                android:background="@drawable/bg_login_button"
                android:gravity="center"
                android:text="@string/btn_data_clear"
                android:textColor="@color/white"
                android:textSize="9sp" />
            <TextView
                android:id="@+id/tv_confirm"
                android:text="@string/btn_data_confirm"
                android:gravity="center"
                android:textSize="9sp"
                android:layout_marginRight="30dp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:background="@drawable/bg_login_button"
                android:layout_width="75dp"
                android:layout_height="match_parent"/>
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>